[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dlo-force-planner"
version = "0.1.0"
description = "Minimal 2D DLO force planning demo using a simple simulator and pymoo GA."
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
    "pandas>=2.0",
    "pymoo>=0.6.0",
    "pillow>=10.0",
]

[tool.setuptools.packages.find]
where = ["src"]
